--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <ol>
+		<li data-ns-test="shoppingList">Novels</li>
+		<li data-ns-test="shoppingList">Clothes</li>
+		<li data-ns-test="shoppingList">Plan a trip</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Jammu&Kashmir</li>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">Dubai</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
